--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "firebase": "^12.2.1",
     "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18",
