--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "react-moment": "^1.1.3",
     "react-redux": "^9.2.0",
     "sharp": "^0.34.3"
   },
