--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "firebase": "^12.2.1",
+    "motion": "^12.23.18",
     "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18",
