--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^12.2.1",
     "motion": "^12.23.18",
     "next": "^14.2.32",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
