--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^12.2.1",
     "motion": "^12.23.18",
     "next": "^14.2.32",
+    "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +21,7 @@
     "react-moment": "^1.1.3",
     "react-redux": "^9.2.0",
     "sharp": "^0.34.3",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
