--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-moment": "^1.1.3",
     "react-redux": "^9.2.0",
